# Content-creator-optimizer

./: .env.example  .gitignore  AGENTS.md  README.md  cloud.md  docker-compose.yml  main.py  pyproject.toml  recheck_stanford_extended_results.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agent_progress_vault/: MOC.md
docs/: external-publication-operator-inputs.example.env  external-publication-proof-runbook.md  repo-workflow.md
harness_engineering/: AGENTS.md  index.md
planning/: foundation-system-design.html
scripts/: AGENT-MONITORING.md  ci-python-stable-tests.sh  local_gemma_e4b_proxy.py  setup-local-gemma-e4b-mlx.sh  start-local-gemma-e4b-proxy.sh  watch-agent-transcripts.sh
services/retrieval-ranker/: Cargo.toml  README.md
services/retrieval-ranker/src/: contracts.rs  graph.rs  lib.rs  main.rs  scorer.rs  service.rs
services/retrieval-ranker/tests/: cli_tests.rs  ranker_tests.rs
services/voice-edge/: Cargo.toml  README.md
services/voice-edge/src/: cli.rs  contracts.rs  http.rs  lib.rs  main.rs  service.rs  vad.rs
services/voice-edge/tests/: voice_edge_tests.rs
social_media_optimiser/: Agent Studio MOC.md  SCHEMA.md  Welcome.md  agent-studio-vault-home.html  log.md
system_design_vault/: .gitignore  MOC.md  README.md  agent-studio-system-design-home.html
tcf_canada_training/: SCHEMA.md  TCF Canada Training MOC.md  log.md
tests/: conftest.py  test_a2a_discovery.py  test_a2a_map_browser.py  test_api_contracts.py  test_blocker_acceptance_gates_browser.py  test_blocker_credential_classifier.py  test_blocker_credential_snapshot_cli.py  test_blocker_proof_packets_browser.py  test_blocker_snapshot_consistency.py  test_cli_scheduler.py  test_deterministic_reranker.py  test_feedback_loop_map_browser.py  test_foundation.py  test_gemma_voice_boundary_browser.py  test_hld_lld_viewer_browser.py  test_live_postgres.py  test_livekit_voice_timing_capture.py  test_local_provider_config.py  test_memory_os_viewer_browser.py  test_model_routing.py  test_openrouter_livekit_voice_boundary_browser.py  test_proof_readiness_browser.py  test_provider_proof_plan_cli.py  test_providers.py  test_publication_boundary_browser.py  test_realtime_safety.py  (+15 more)
(+776 files in other folders)
