[project]
name = "all-about-llms"
version = "0.1.0"
description = "Realtime multi-agent content studio foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.114.0",
    "httpx>=0.28.0",
    "langgraph>=0.6.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.3,<2.4.0",
    "pandas>=2.3.3",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic-settings>=2.10.0",
    "pyyaml>=6.0.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.51.0",
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]
voice = [
    "kokoro>=0.9.2",
    "livekit-agents>=1.0.0",
    "soundfile>=0.12.1",
]

[project.scripts]
all-about-llms = "all_about_llms.main:main"
all-about-llms-admin = "all_about_llms.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/all_about_llms"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
